objects/ChartConfig__c.object
<CustomObject>
    <fields>
        <fullName>DashBoardConfig__c</fullName>
        <label>DashBoardConfig</label>
        <referenceTo>DashBoardConfig__c</referenceTo>
        <relationshipLabel>ChartConfigs</relationshipLabel>
        <relationshipName>ChartConfigs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ShowTableOnClick__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ShowTableOnClick</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubHeader__c</fullName>
        <label>SubHeader</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TableFields__c</fullName>
        <label>TableFields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>YAxisField__c</fullName>
        <label>YAxisField</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ChartConfig</label>
    <nameField>
        <label>ChartConfig Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ChartConfigs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>